# auth-service

./: .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 5a813a625a4e_initial.py  8ba4a4b8fe09_secondmigration.py
auth_system/: exceptpractice.py  main.py
auth_system/db/: database.py
auth_system/logging/: config.py
auth_system/models/: user.py
auth_system/router/: auth_router.py
auth_system/schema/: models.py
auth_system/services/: auth_service.py
auth_system/utils/: security.py
